# SentinelPipeline

./: .gitignore  Dockerfile  README.md  config.example.json  config.json  docker-compose.yml  pyproject.toml  scream_detector.py  stt_keyword_test_log.csv
docs/: API_STREAMS_SPEC.md  SentinelPipeline_Streams_API.postman_collection.json  architecture.md
docs/blog/: 00-common-modules-design.md  01-project-introduction.md  02-domain-layer-design.md  03-application-layer-design.md  04-infrastructure-layer-design.md  05-interface-api-design.md  06-dynamic-resolution-issue.md  07-audio-librosa-preprocessing.md  08-resnet34-scream-detection.md  09-hybrid-keyword-detection-pipeline.md  10-word-embedding.md
models/audio/: keywords.json
scripts/: check_syntax.sh  curl_test.sh  resample_audio_dataset.py  sentinel_gradio_with_similarity.py  test_batch_inference.py
src/sentinel_pipeline/: __init__.py  main.py
src/sentinel_pipeline/application/: __init__.py
src/sentinel_pipeline/application/config/: __init__.py  manager.py
src/sentinel_pipeline/application/event/: __init__.py  emitter.py
src/sentinel_pipeline/application/pipeline/: __init__.py  pipeline.py  scheduler.py
src/sentinel_pipeline/application/stream/: __init__.py  audio_manager.py  health.py  manager.py
src/sentinel_pipeline/common/: __init__.py  errors.py  logging.py
src/sentinel_pipeline/domain/: __init__.py
src/sentinel_pipeline/domain/interfaces/: __init__.py  audio_processor.py  module.py
src/sentinel_pipeline/domain/models/: __init__.py  audio_stream.py  event.py  stream.py
src/sentinel_pipeline/infrastructure/: __init__.py
src/sentinel_pipeline/infrastructure/audio/processors/: batch_scream_detector.py  hybrid_keyword_detector.py  keyword_matcher.py  morphological_matcher.py  risk_analyzer.py  scream_detector.py  semantic_matcher.py  vad_filter.py
src/sentinel_pipeline/infrastructure/audio/readers/: mic_reader.py  rtsp_reader.py
src/sentinel_pipeline/infrastructure/inference/: __init__.py  runtime.py
src/sentinel_pipeline/infrastructure/transport/: __init__.py  http_client.py  ws_client.py
src/sentinel_pipeline/infrastructure/video/: __init__.py  ffmpeg_publisher.py  rtsp_decoder.py
src/sentinel_pipeline/interface/api/: __init__.py  app.py  dependencies.py  ws_bus.py
src/sentinel_pipeline/interface/api/routes/: admin_debug.py  admin_ws.py  audio.py  benchmark.py  config.py  dashboard.py  health.py  metrics.py  streams.py  video.py
src/sentinel_pipeline/interface/api/static/dashboard/: app.js  index.html  load_test.html  style.css
src/sentinel_pipeline/interface/config/: __init__.py  loader.py  schema.py
src/sentinel_pipeline/interface/static/audio/: index.html
src/sentinel_pipeline/interface/static/audio/css/: styles.css
src/sentinel_pipeline/interface/static/audio/js/: app.js
src/sentinel_pipeline/interface/static/audio/js/application/: EventMapper.js  EventService.js  StreamService.js
src/sentinel_pipeline/interface/static/audio/js/components/: StreamCard.js
src/sentinel_pipeline/interface/static/audio/js/domain/: Event.js  PipelineStatus.js  Stream.js
src/sentinel_pipeline/interface/static/audio/js/interface/components/: EventChart.js  EventHistory.js  KpiDashboard.js  LogViewer.js  PipelineVisualizer.js  StreamList.js  WaveformViewer.js
src/sentinel_pipeline/interface/static/audio/js/interface/handlers/: StreamHandler.js
src/sentinel_pipeline/interface/static/audio/js/presentation/: Renderer.js
src/sentinel_pipeline/interface/static/common/js/: ApiClient.js  BaseComponent.js  EventBus.js  WebSocketClient.js
src/sentinel_pipeline/interface/static/video/: index.html
src/sentinel_pipeline/interface/static/video/css/: style.css
src/sentinel_pipeline/interface/static/video/js/: app.js
src/sentinel_pipeline/plugins/: __init__.py  face_blur_module.py
src/sentinel_pipeline/scripts/: __init__.py  benchmark_runner.py  check_scream.py  data_loader.py
