[project]
name = "sentinel-pipeline"
version = "0.1.0"
description = "SentinelPipeline - Modular Real-time Stream AI Processing Engine"
requires-python = ">=3.10"

dependencies = [
    "opencv-python>=4.9.0",
    "numpy>=1.26",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "requests>=2.32",
    "loguru>=0.7",
    "psutil>=5.9",
    "uvloop>=0.19",
    "orjson>=3.10",
    "tenacity>=9.0",

    # AI inference
    "torch>=2.2 ; sys_platform == 'linux'",
    "torchvision>=0.17 ; sys_platform == 'linux'",
    "onnxruntime-gpu>=1.18",
    "ultralytics>=8.1",

    # Async/Networking
    "aiofiles>=23.2",
    "httpx>=0.27",
    "websockets>=12.0",

    # Observability
    "prometheus-client>=0.19",

    # API Server & Admin Dashboard
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
]

[tool.uv]
cache-dir = ".uv-cache"
