[project]
name = "sentinel-pipeline"
version = "0.1.0"
description = "SentinelPipeline - Modular Real-time Stream AI Processing Engine"
requires-python = ">=3.10"

dependencies = [
    "opencv-python>=4.9.0",
    "numpy>=1.26",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "requests>=2.32",
    "loguru>=0.7",
    "psutil>=5.9",
    "uvloop>=0.19 ; sys_platform != 'win32'",
    "orjson>=3.10",
    "tenacity>=9.0",

    # AI inference
    "torch>=2.2 ; sys_platform == 'linux'",
    "torchvision>=0.17 ; sys_platform == 'linux'",
    "onnxruntime-gpu>=1.18",
    "ultralytics>=8.1",

    # Async/Networking
    "aiofiles>=23.2",
    "httpx>=0.27",
    "websockets>=12.0",

    # Observability
    "prometheus-client>=0.19",

    # API Server & Admin Dashboard
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
    "httpx>=0.27",  # 테스트용 HTTP 클라이언트
]

[tool.uv]
cache-dir = ".uv-cache"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
exclude = ["tests/", "docs/"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["sentinel_pipeline"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
