[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel-pipeline"
version = "0.1.0"
description = "SentinelPipeline - Modular Real-time Stream AI Processing Engine"
requires-python = ">=3.10"

dependencies = [
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26,<2.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "requests>=2.32",
    "loguru>=0.7",
    "psutil>=5.9",
    "uvloop>=0.19 ; sys_platform != 'win32'",
    "orjson>=3.10",
    "tenacity>=9.0",

    # AI inference
    "torch==2.2.2",
    "torchvision==0.17.2",
    "onnxruntime>=1.18",
    "ultralytics>=8.1",

    # Async/Networking
    "aiofiles>=23.2",
    "httpx>=0.27",
    "websockets>=12.0",

    # Observability
    "prometheus-client>=0.19",

    # API Server & Admin Dashboard
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",

    # Audio Module
    "torchaudio==2.2.2",
    "faster-whisper>=0.10",
    "librosa>=0.10",
    "scipy>=1.11",
    "pyaudio>=0.2.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
    "httpx>=0.27",  # 테스트용 HTTP 클라이언트
]

[tool.uv]
# Linux와 Windows 환경 모두를 지원하도록 해결 범위 확장
environments = ["sys_platform == 'linux'", "sys_platform == 'win32'"]

# Pytorch CPU 인덱스 설정 (explicit = true는 명시된 패키지 외에는 이 인덱스를 쓰지 말라는 의미)
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# 특정 패키지만 해당 인덱스에서 가져오도록 지정 (requests 등 다른 패키지와의 충돌 방지)
[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel_pipeline"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
exclude = ["tests/", "docs/"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["sentinel_pipeline"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
